antlr-repl-simple/src/main/java/plus/g4/Plus.g4
grammar Plus;

@parser::header {
	import plus.PlusVm;
}

@parser::members {
	PlusVm vm = new PlusVm();
}

expr: INT
	{
		vm.read($INT.text);
	}
	| x = list
	;

list: '(' '+' expr expr ')'
	{
		vm.plus();
	}
	;

INT: [0-9]
	;

WS: [ \t]+ -> skip
	;

EOL: ( '\r' '\n' ? | '\n' ) -> skip
	;
